--- a/BackEndLog/package.json
+++ b/BackEndLog/package.json
@@ -14,9 +14,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "express-sessions": "^1.0.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
+    "mongoose-findorcreate": "^4.0.0",
     "package": "^1.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "passport-oauth2": "^1.8.0",
     "validator": "^13.11.0"
   }
 }
