--- a/BackEndLog/package.json
+++ b/BackEndLog/package.json
@@ -16,12 +16,15 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "express-sessions": "^1.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.2",
+    "mongoose": "^8.2.4",
     "mongoose-findorcreate": "^4.0.0",
     "package": "^1.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.1",
     "passport-local-mongoose": "^8.0.0",
     "passport-oauth2": "^1.8.0",
     "validator": "^13.11.0"
