--- a/BackEndLog/package.json
+++ b/BackEndLog/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -21,6 +22,8 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "mongoose-findorcreate": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "package": "^1.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
