--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose-findorcreate": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
     "package": "^1.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
