--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "banckendlog",
+  "name": "brain-gymnastic",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.3",
@@ -25,6 +26,7 @@
     "mongoose-findorcreate": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
     "package": "^1.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
